<resources>
    <string name="app_name">MyAndlab</string>
    <string name="btnFourbtn1">Four Button(p103)</string>
    <string name="btnFourbtn2">Four Button(p103,리니어레이아웃)</string>
    <string name="gogoogle">구글 열기</string>
    <string name="calling911">911 응급전화 걸기</string>
    <string name="openphoto">갤러리 열기</string>
    <string name="back">돌아가기</string>
    <string name="btnCal">심플 계산기(p.176, 위젯)</string>
    <string name="btnBasicwidget">기본위젯연습(p.185, 위젯)</string>
    <string name="androidphone">안드로이드폰</string>
    <string name="iphone">아이폰</string>
    <string name="windowsphone">윈도폰</string>
    <string name="bulb">천정등</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="pictures">애완동물 사진 보기</string>
    <string name="rotate">회전하기</string>
    <string name="button_datetimebook">날짜시간예약</string>
    <string name="button_viewflipper">뷰플리퍼</string>
    <string name="button_tabhost">탭호스트</string>
    <string name="button_tabfrag">탭(프래그먼트)</string>
    <string name="button_webView">웹 뷰</string>
    <string name="button_menu">메뉴 만들기</string>
    <string name="button_snackbar">스낵 바</string>
    <string name="button_customdialog">커스텀 다이얼로그</string>
    <string name="button_readwrite">fildInputStream</string>
    <string name="button_canvas">그래픽 그리기</string>
    <string name="draw_line">선 그리기</string>
    <string name="draw_circle">원 그리기</string>
    <string name="painter_activity">간단액티비티</string>
    <string name="button_Painter">페인터</string>
    <string name="draw_Rectangle">사각형 그리기</string>
    <string name="change_color">색상 변경</string>
    <string name="red">빨강</string>
    <string name="blue">파랑</string>
    <string name="mode">모드</string>
</resources>